--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
         <a href="./index.html" class="logo"><span class="logo-design">Web</span>Studio</a>
       <nav>
         <ul class="menu-nav list">
-          <li class="item menu-link">
+          <li class="item">
             <a href="./index.html" class="link-nav underline-link">Студия</a>
           </li>
-          <li class="item menu-link">
+          <li class="item">
             <a href="./portfolio.html" target="_blank" class="link-nav underline-link">Портфолио</a>
           </li>
-          <li class="item menu-link">
+          <li class="item">
             <a href="" target="_blank" class="link-nav underline-link">Контакты</a>
           </li>
         </ul>
@@ -224,7 +224,7 @@
       <h2 class="invisible">Контакты</h2>
       <div class="footer-flex">
 
-      <div class="address-flex">
+      <div class="address">
       <a href="./index.html" class="logo logo-footer"><span class="logo-design">Web</span>Studio</a>
 
       <address>
@@ -242,10 +242,10 @@
         </ul>
       </address>
       </div>
-      <div class="social-flex">
-      <b class="contact">присоединяйтесь</b>
+      <div class="social">
+      <b class="social-contact">присоединяйтесь</b>
 
-      <ul class="social list">
+      <ul class="social-list list">
         <li class="icon-footer">
           <a href="" class="social-link-second">
           <svg class="icon-social">
@@ -277,12 +277,12 @@
       </ul>
       </div>
       <div class="subscribe">
-        <b class="contact">подпишитесь на рассылку</b>
+        <b class="subscribe-contact">подпишитесь на рассылку</b>
   
         <div class="footer-form">
   <form>
-    <label for="">
-      <input type="email" name="email" placeholder="E-mail" class="footer-input">
+    <label>
+      <input type="email" name="email" placeholder="E-mail" class="footer-form-input">
     </label>
   </form>
         <button class="button-footer" type="button">Подписаться
@@ -294,8 +294,8 @@
   </div>
 
       </div>
-      <div class="copy-flex">
-      <p class="copy reset">2020 | Developed by GoIT Students</p>
+      <div class="cont-flex">
+      <p class="cont-flex-copy reset">2020 | Developed by GoIT Students</p>
       </div>
 
      </div>
